# Gluster-assigments

file-tracker/: Makefile  Makefile.in
file-tracker/Vol_file/: test-ft.testpc.brick-test-ft.vol
file-tracker/src/: Makefile  Makefile.am  Makefile.in  file-tracker.c  file-tracker.h
file-tracker/src/.deps/: file-tracker.Plo
file-tracker/src/.libs/: file-tracker.la  file-tracker.lai  file-tracker.soT
new-rot-13/: Makefile  Makefile.in
new-rot-13/src/: Makefile  Makefile.am  Makefile.in  new-rot-13.c  new-rot-13.h  new-rot-13.la  new-rot-13.lo  rot-13.la
new-rot-13/src/.deps/: new-rot-13.Plo
new-rot-13/src/.libs/: new-rot-13.la  new-rot-13.lai  new-rot-13.soT
worm-retention/src/: Makefile.am  file-tracker.c  worm-retention.c  worm-retention.h  wr-mem-types.h
worm-retention_old/src/: ft-mem-types.h
